first 3 chans for sub 1 took 10 mins 18 sec, with k=2 and win length being 2 seconds (1 to each side); filtering not efficient

--- a/notebooks/anphy_code/sampling_N1_W.ipynb
+++ b/notebooks/anphy_code/sampling_N1_W.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "from matplotlib import pyplot as plt\n",
     "from scipy.signal import butter, filtfilt, resample_poly\n",
     "from scipy.signal import iirnotch, filtfilt\n",
-    "from scipy.signal import find_peaks"
+    "from scipy.signal import find_peaks\n",
+    "from multiprocessing import Pool, cpu_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,17 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'EPCTL01': {'W': [3240, 3150, 11130, 2580, 2790], 'N1': [16470, 19380, 3450, 14520, 6210]}, 'EPCTL02': {'W': [7380, 1650, 5880, 8280, 29190], 'N1': [9570, 12930, 13800, 21540, 9210]}, 'EPCTL03': {'W': [23220, 13500, 18780, 12210, 5190], 'N1': [21270, 13710, 13740, 23460, 24270]}, 'EPCTL04': {'W': [4770, 17310, 4260, 6990, 4830], 'N1': [3750, 7320, 15600, 6090, 5970]}, 'EPCTL05': {'W': [3330, 16740, 8130, 810, 1230], 'N1': [11670, 11700, 19170, 3510, 11790]}, 'EPCTL06': {'W': [840, 1350, 1440, 16350, 25230], 'N1': [13650, 26280, 21360, 16530, 12990]}, 'EPCTL07': {'W': [24240, 2640, 21570, 2550, 24330], 'N1': [15420, 25980, 6300, 21120, 23460]}, 'EPCTL08': {'W': [2400, 3660, 3450, 2880, 4050], 'N1': [18300, 22110, 19350, 22350, 14910]}, 'EPCTL09': {'W': [960, 4440, 19320, 4590, 20580], 'N1': [5340, 22260, 1410, 10500, 17010]}, 'EPCTL10': {'W': [20580, 19650, 18750, 20730, 20460], 'N1': [7350, 25650, 720, 14880, 21840]}, 'EPCTL11': {'W': [20490, 1620, 6090, 23130, 8550], 'N1': [14760, 3540, 3390, 12960, 930]}, 'EPCTL12': {'W': [1950, 2130, 3840, 810, 2790], 'N1': [14760, 15390, 11880, 14340, 12510]}, 'EPCTL13': {'W': [21690, 2100, 20820, 2220, 20100], 'N1': [17610, 20550, 16320, 2790, 2970]}, 'EPCTL14': {'W': [20610, 14580, 14670, 22170, 20460], 'N1': [14760, 19500, 22710, 18480, 4680]}, 'EPCTL15': {'W': [1230, 690, 12120, 11880, 1740], 'N1': [18930, 13320, 18330, 21000, 16890]}, 'EPCTL16': {'W': [23970, 18480, 12600, 23940, 18540], 'N1': [11310, 5640, 21990, 2790, 6630]}, 'EPCTL17': {'W': [24000, 6330, 26100, 25050, 270], 'N1': [14400, 16800, 14610, 720, 8670]}, 'EPCTL18': {'W': [10830, 12750, 13710, 11880, 13560], 'N1': [15510, 15840, 15630, 660, 4170]}, 'EPCTL19': {'W': [11880, 19680, 18690, 17700, 19080], 'N1': [12810, 26250, 4770, 1080, 5100]}, 'EPCTL20': {'W': [25980, 12780, 25500, 27540, 22620], 'N1': [390, 11790, 17730, 4680, 4590]}, 'EPCTL21': {'W': [510, 840, 5790, 1680, 13890], 'N1': [16800, 20340, 9150, 14880, 10110]}, 'EPCTL22': {'W': [690, 1020, 26040, 23910, 26430], 'N1': [26790, 4350, 21210, 1230, 6570]}, 'EPCTL23': {'W': [17880, 28020, 27030, 14340, 27360], 'N1': [10080, 17280, 5160, 17310, 22140]}, 'EPCTL24': {'W': [12060, 23880, 26670, 600, 6960], 'N1': [15420, 19140, 1230, 12330, 1170]}, 'EPCTL25': {'W': [16980, 16440, 4050, 17430, 18210], 'N1': [4320, 5430, 14610, 11310, 19830]}, 'EPCTL26': {'W': [11130, 9240, 7170, 11280, 11010], 'N1': [13200, 24390, 24420, 8220, 24480]}, 'EPCTL27': {'W': [13020, 10050, 17760, 600, 15480], 'N1': [10260, 16110, 2460, 13890, 18660]}, 'EPCTL28': {'W': [19410, 16140, 16170, 20730, 26010], 'N1': [16410, 14970, 16500, 5310, 8700]}, 'EPCTL29': {'W': [24750, 6300, 21540, 23850, 23370], 'N1': [5640, 5850, 15540, 5310, 6840]}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # this one just selects the time indices\n",
     "# k = 10  # total samples per subject\n",
@@ -126,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -285,20 +278,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 29\u001b[0m\n\u001b[1;32m     27\u001b[0m total_samples \u001b[38;5;241m=\u001b[39m reader\u001b[38;5;241m.\u001b[39mgetNSamples()[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     28\u001b[0m n_channels \u001b[38;5;241m=\u001b[39m reader\u001b[38;5;241m.\u001b[39msignals_in_file\n\u001b[0;32m---> 29\u001b[0m signals \u001b[38;5;241m=\u001b[39m [\u001b[43mreader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreadSignal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_channels)]\n\u001b[1;32m     30\u001b[0m channel_labels \u001b[38;5;241m=\u001b[39m reader\u001b[38;5;241m.\u001b[39mgetSignalLabels()\n\u001b[1;32m     31\u001b[0m reader\u001b[38;5;241m.\u001b[39mclose()\n",
-      "File \u001b[0;32m~/anaconda3/envs/cnt_gen/lib/python3.12/site-packages/pyedflib/edfreader.py:722\u001b[0m, in \u001b[0;36mEdfReader.readSignal\u001b[0;34m(self, chn, start, n, digital)\u001b[0m\n\u001b[1;32m    720\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mread_digital_signal(chn, start, n, x)\n\u001b[1;32m    721\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 722\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreadsignal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstart\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    723\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x\n\u001b[1;32m    724\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 6 windows for EPCTL01 at /Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep_data/EPCTL01/extracted_windows.pkl\n"
      ]
     }
    ],
@@ -313,7 +306,8 @@
     "half_window_sec = window_sec / 2\n",
     "\n",
     "# Process first 10 subjects\n",
-    "for subject in subject_dirs[:10]:\n",
+    "# for subject in subject_dirs[:10]:\n",
+    "for subject in subject_dirs[:1]:\n",
     "    subj_path = os.path.join(data_dir, subject)\n",
     "    csv_files = glob.glob(os.path.join(subj_path, \"*.csv\"))\n",
     "    edf_files = glob.glob(os.path.join(subj_path, \"*.edf\"))\n",
@@ -338,7 +332,8 @@
     "    reader.close()\n",
     "\n",
     "    subject_windows = {}\n",
-    "    for i, ch_label in enumerate(channel_labels):\n",
+    "    # for i, ch_label in enumerate(channel_labels):\n",
+    "    for i, ch_label in enumerate(channel_labels[:3]):  \n",
     "        for stage, sample_times in zip([\"W\", \"N1\"], [sample_W, sample_N1]):\n",
     "            for j, t in enumerate(sample_times):\n",
     "                start = int((t - half_window_sec) * fs)\n",
@@ -364,108 +359,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for subject in subject_dirs[10:20]:\n",
-    "    subj_path = os.path.join(data_dir, subject)\n",
-    "    csv_files = glob.glob(os.path.join(subj_path, \"*.csv\"))\n",
-    "    edf_files = glob.glob(os.path.join(subj_path, \"*.edf\"))\n",
-    "    if not csv_files or not edf_files:\n",
-    "        print(f\"Skipping {subject}: missing CSV or EDF.\")\n",
-    "        continue\n",
-    "    df = pd.read_csv(csv_files[0], index_col=0)\n",
-    "    df_W = df[df[\"stage\"]==\"W\"]\n",
-    "    df_N1 = df[df[\"stage\"]==\"N1\"]\n",
-    "    n_per_stage = 1  # using k = 2 per electrode as before (k/2 each)\n",
-    "    if len(df_W) < n_per_stage or len(df_N1) < n_per_stage:\n",
-    "        print(f\"Skipping {subject}: not enough epochs for one stage.\")\n",
-    "        continue\n",
-    "    sample_W = df_W.sample(n=n_per_stage, random_state=0)[\"time_index\"].values\n",
-    "    sample_N1 = df_N1.sample(n=n_per_stage, random_state=0)[\"time_index\"].values\n",
+    "# for subject in subject_dirs[10:20]:\n",
+    "#     subj_path = os.path.join(data_dir, subject)\n",
+    "#     csv_files = glob.glob(os.path.join(subj_path, \"*.csv\"))\n",
+    "#     edf_files = glob.glob(os.path.join(subj_path, \"*.edf\"))\n",
+    "#     if not csv_files or not edf_files:\n",
+    "#         print(f\"Skipping {subject}: missing CSV or EDF.\")\n",
+    "#         continue\n",
+    "#     df = pd.read_csv(csv_files[0], index_col=0)\n",
+    "#     df_W = df[df[\"stage\"]==\"W\"]\n",
+    "#     df_N1 = df[df[\"stage\"]==\"N1\"]\n",
+    "#     n_per_stage = 1  # using k = 2 per electrode as before (k/2 each)\n",
+    "#     if len(df_W) < n_per_stage or len(df_N1) < n_per_stage:\n",
+    "#         print(f\"Skipping {subject}: not enough epochs for one stage.\")\n",
+    "#         continue\n",
+    "#     sample_W = df_W.sample(n=n_per_stage, random_state=0)[\"time_index\"].values\n",
+    "#     sample_N1 = df_N1.sample(n=n_per_stage, random_state=0)[\"time_index\"].values\n",
     "\n",
-    "    reader = pyedflib.EdfReader(edf_files[0])\n",
-    "    fs = reader.getSampleFrequency(0)\n",
-    "    total_samples = reader.getNSamples()[0]\n",
-    "    n_channels = reader.signals_in_file\n",
-    "    signals = [reader.readSignal(i) for i in range(n_channels)]\n",
-    "    channel_labels = reader.getSignalLabels()\n",
-    "    reader.close()\n",
+    "#     reader = pyedflib.EdfReader(edf_files[0])\n",
+    "#     fs = reader.getSampleFrequency(0)\n",
+    "#     total_samples = reader.getNSamples()[0]\n",
+    "#     n_channels = reader.signals_in_file\n",
+    "#     signals = [reader.readSignal(i) for i in range(n_channels)]\n",
+    "#     channel_labels = reader.getSignalLabels()\n",
+    "#     reader.close()\n",
     "\n",
-    "    half_window_sec = 1  # window_sec=2 seconds (±1 sec)\n",
-    "    subject_windows = {}\n",
-    "    for i, ch_label in enumerate(channel_labels):\n",
-    "        for stage, sample_times in zip([\"W\", \"N1\"], [sample_W, sample_N1]):\n",
-    "            for j, t in enumerate(sample_times):\n",
-    "                start = int((t - half_window_sec) * fs)\n",
-    "                end = int((t + half_window_sec) * fs)\n",
-    "                if start < 0 or end > total_samples:\n",
-    "                    continue\n",
-    "                win = signals[i][start:end]\n",
-    "                win = notch_filter(win, fs, freq=60, Q=30)\n",
-    "                win = lowpass_filter(win, fs, cutoff=90, order=4)\n",
-    "                ds_win = downsample_window(win, fs, target_fs=200)\n",
-    "                key = f\"{subject.lower()}_{stage.lower()}_win_{j+1}_{ch_label.replace('-', '').replace(' ', '')}\"\n",
-    "                subject_windows[key] = ds_win\n",
+    "#     half_window_sec = 1  # window_sec=2 seconds (±1 sec)\n",
+    "#     subject_windows = {}\n",
+    "#     for i, ch_label in enumerate(channel_labels):\n",
+    "#         for stage, sample_times in zip([\"W\", \"N1\"], [sample_W, sample_N1]):\n",
+    "#             for j, t in enumerate(sample_times):\n",
+    "#                 start = int((t - half_window_sec) * fs)\n",
+    "#                 end = int((t + half_window_sec) * fs)\n",
+    "#                 if start < 0 or end > total_samples:\n",
+    "#                     continue\n",
+    "#                 win = signals[i][start:end]\n",
+    "#                 win = notch_filter(win, fs, freq=60, Q=30)\n",
+    "#                 win = lowpass_filter(win, fs, cutoff=90, order=4)\n",
+    "#                 ds_win = downsample_window(win, fs, target_fs=200)\n",
+    "#                 key = f\"{subject.lower()}_{stage.lower()}_win_{j+1}_{ch_label.replace('-', '').replace(' ', '')}\"\n",
+    "#                 subject_windows[key] = ds_win\n",
     "\n",
-    "    out_path = os.path.join(subj_path, \"extracted_windows.pkl\")\n",
-    "    with open(out_path, \"wb\") as f:\n",
-    "        pickle.dump(subject_windows, f)\n",
-    "    print(f\"Saved {len(subject_windows)} windows for {subject} at {out_path}\")"
+    "#     out_path = os.path.join(subj_path, \"extracted_windows.pkl\")\n",
+    "#     with open(out_path, \"wb\") as f:\n",
+    "#         pickle.dump(subject_windows, f)\n",
+    "#     print(f\"Saved {len(subject_windows)} windows for {subject} at {out_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for subject in subject_dirs[20:]:\n",
-    "    subj_path = os.path.join(data_dir, subject)\n",
-    "    csv_files = glob.glob(os.path.join(subj_path, \"*.csv\"))\n",
-    "    edf_files = glob.glob(os.path.join(subj_path, \"*.edf\"))\n",
-    "    if not csv_files or not edf_files:\n",
-    "        print(f\"Skipping {subject}: missing CSV or EDF.\")\n",
-    "        continue\n",
-    "    df = pd.read_csv(csv_files[0], index_col=0)\n",
-    "    df_W = df[df[\"stage\"]==\"W\"]\n",
-    "    df_N1 = df[df[\"stage\"]==\"N1\"]\n",
-    "    n_per_stage = 1  # k=2 per electrode (k/2 each)\n",
-    "    if len(df_W) < n_per_stage or len(df_N1) < n_per_stage:\n",
-    "        print(f\"Skipping {subject}: not enough epochs for one stage.\")\n",
-    "        continue\n",
-    "    sample_W = df_W.sample(n=n_per_stage, random_state=0)[\"time_index\"].values\n",
-    "    sample_N1 = df_N1.sample(n=n_per_stage, random_state=0)[\"time_index\"].values\n",
+    "# for subject in subject_dirs[20:]:\n",
+    "#     subj_path = os.path.join(data_dir, subject)\n",
+    "#     csv_files = glob.glob(os.path.join(subj_path, \"*.csv\"))\n",
+    "#     edf_files = glob.glob(os.path.join(subj_path, \"*.edf\"))\n",
+    "#     if not csv_files or not edf_files:\n",
+    "#         print(f\"Skipping {subject}: missing CSV or EDF.\")\n",
+    "#         continue\n",
+    "#     df = pd.read_csv(csv_files[0], index_col=0)\n",
+    "#     df_W = df[df[\"stage\"]==\"W\"]\n",
+    "#     df_N1 = df[df[\"stage\"]==\"N1\"]\n",
+    "#     n_per_stage = 1  # k=2 per electrode (k/2 each)\n",
+    "#     if len(df_W) < n_per_stage or len(df_N1) < n_per_stage:\n",
+    "#         print(f\"Skipping {subject}: not enough epochs for one stage.\")\n",
+    "#         continue\n",
+    "#     sample_W = df_W.sample(n=n_per_stage, random_state=0)[\"time_index\"].values\n",
+    "#     sample_N1 = df_N1.sample(n=n_per_stage, random_state=0)[\"time_index\"].values\n",
     "\n",
-    "    reader = pyedflib.EdfReader(edf_files[0])\n",
-    "    fs = reader.getSampleFrequency(0)\n",
-    "    total_samples = reader.getNSamples()[0]\n",
-    "    n_channels = reader.signals_in_file\n",
-    "    signals = [reader.readSignal(i) for i in range(n_channels)]\n",
-    "    channel_labels = reader.getSignalLabels()\n",
-    "    reader.close()\n",
+    "#     reader = pyedflib.EdfReader(edf_files[0])\n",
+    "#     fs = reader.getSampleFrequency(0)\n",
+    "#     total_samples = reader.getNSamples()[0]\n",
+    "#     n_channels = reader.signals_in_file\n",
+    "#     signals = [reader.readSignal(i) for i in range(n_channels)]\n",
+    "#     channel_labels = reader.getSignalLabels()\n",
+    "#     reader.close()\n",
     "\n",
-    "    half_window_sec = 1  # window spans 2 sec (±1 sec)\n",
-    "    subject_windows = {}\n",
-    "    for i, ch_label in enumerate(channel_labels):\n",
-    "        for stage, sample_times in zip([\"W\", \"N1\"], [sample_W, sample_N1]):\n",
-    "            for j, t in enumerate(sample_times):\n",
-    "                start = int((t - half_window_sec) * fs)\n",
-    "                end = int((t + half_window_sec) * fs)\n",
-    "                if start < 0 or end > total_samples:\n",
-    "                    continue\n",
-    "                win = signals[i][start:end]\n",
-    "                win = notch_filter(win, fs, freq=60, Q=30)\n",
-    "                win = lowpass_filter(win, fs, cutoff=90, order=4)\n",
-    "                ds_win = downsample_window(win, fs, target_fs=200)\n",
-    "                key = f\"{subject.lower()}_{stage.lower()}_win_{j+1}_{ch_label.replace('-', '').replace(' ', '')}\"\n",
-    "                subject_windows[key] = ds_win\n",
+    "#     half_window_sec = 1  # window spans 2 sec (±1 sec)\n",
+    "#     subject_windows = {}\n",
+    "#     for i, ch_label in enumerate(channel_labels):\n",
+    "#         for stage, sample_times in zip([\"W\", \"N1\"], [sample_W, sample_N1]):\n",
+    "#             for j, t in enumerate(sample_times):\n",
+    "#                 start = int((t - half_window_sec) * fs)\n",
+    "#                 end = int((t + half_window_sec) * fs)\n",
+    "#                 if start < 0 or end > total_samples:\n",
+    "#                     continue\n",
+    "#                 win = signals[i][start:end]\n",
+    "#                 win = notch_filter(win, fs, freq=60, Q=30)\n",
+    "#                 win = lowpass_filter(win, fs, cutoff=90, order=4)\n",
+    "#                 ds_win = downsample_window(win, fs, target_fs=200)\n",
+    "#                 key = f\"{subject.lower()}_{stage.lower()}_win_{j+1}_{ch_label.replace('-', '').replace(' ', '')}\"\n",
+    "#                 subject_windows[key] = ds_win\n",
     "\n",
-    "    out_path = os.path.join(subj_path, \"extracted_windows.pkl\")\n",
-    "    with open(out_path, \"wb\") as f:\n",
-    "        pickle.dump(subject_windows, f)\n",
-    "    print(f\"Saved {len(subject_windows)} windows for {subject} at {out_path}\")"
+    "#     out_path = os.path.join(subj_path, \"extracted_windows.pkl\")\n",
+    "#     with open(out_path, \"wb\") as f:\n",
+    "#         pickle.dump(subject_windows, f)\n",
+    "#     print(f\"Saved {len(subject_windows)} windows for {subject} at {out_path}\")"
    ]
   }
  ],
