finished for all subs

--- a/notebooks/anphy_code/batch_sampling.ipynb
+++ b/notebooks/anphy_code/batch_sampling.ipynb
@@ -710,83 +710,75 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved 18 windows for EPCTL21 (electrode group 7) at /Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep_data/EPCTL21/extracted_windows_group7.pkl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_dir = \"/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep_data\"\n",
-    "subject_dirs = sorted([d for d in os.listdir(data_dir)\n",
-    "                       if d.lower().startswith(\"epctl\") and os.path.isdir(os.path.join(data_dir, d))])\n",
+    "# data_dir = \"/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep_data\"\n",
+    "# subject_dirs = sorted([d for d in os.listdir(data_dir)\n",
+    "#                        if d.lower().startswith(\"epctl\") and os.path.isdir(os.path.join(data_dir, d))])\n",
     "\n",
-    "# Split 93 electrodes into 10 groups and select the first group.\n",
-    "electrode_indices = np.arange(93)\n",
-    "electrode_groups = np.array_split(electrode_indices, 10)\n",
-    "# first_group = electrode_groups[0]\n",
-    "group = electrode_groups[6]\n",
+    "# # Split 93 electrodes into 10 groups and select the first group.\n",
+    "# electrode_indices = np.arange(93)\n",
+    "# electrode_groups = np.array_split(electrode_indices, 10)\n",
+    "# # first_group = electrode_groups[0]\n",
+    "# group = electrode_groups[6]\n",
     "\n",
-    "# subject_batch = subject_dirs[18:19] # 12:12 done\n",
-    "# subject_batch = subject_dirs[19:20] # done\n",
-    "subject_batch = subject_dirs[20:21] # done\n",
+    "# # subject_batch = subject_dirs[18:19] # 12:12 done\n",
+    "# # subject_batch = subject_dirs[19:20] # done\n",
+    "# subject_batch = subject_dirs[20:21] # done\n",
     "\n",
-    "k = 2  # windows per electrode per subject (so k/2 for \"W\" and k/2 for \"N1\")\n",
-    "n_per_stage = k // 2\n",
-    "window_sec = 2   # window spans 2 sec (±1 sec)\n",
-    "half_window_sec = window_sec / 2\n",
+    "# k = 2  # windows per electrode per subject (so k/2 for \"W\" and k/2 for \"N1\")\n",
+    "# n_per_stage = k // 2\n",
+    "# window_sec = 2   # window spans 2 sec (±1 sec)\n",
+    "# half_window_sec = window_sec / 2\n",
     "\n",
-    "for subject in subject_batch:\n",
-    "    subj_path = os.path.join(data_dir, subject)\n",
-    "    csv_files = glob.glob(os.path.join(subj_path, \"*.csv\"))\n",
-    "    edf_files = glob.glob(os.path.join(subj_path, \"*.edf\"))\n",
-    "    if not csv_files or not edf_files:\n",
-    "        print(f\"Skipping {subject}: missing CSV or EDF.\")\n",
-    "        continue\n",
-    "    df = pd.read_csv(csv_files[0], index_col=0)\n",
-    "    df_W = df[df[\"stage\"]==\"W\"]\n",
-    "    df_N1 = df[df[\"stage\"]==\"N1\"]\n",
-    "    if len(df_W) < n_per_stage or len(df_N1) < n_per_stage:\n",
-    "        print(f\"Skipping {subject}: not enough epochs for one stage.\")\n",
-    "        continue\n",
-    "    # fixed random_state\n",
-    "    sample_W = df_W.sample(n=n_per_stage, random_state=3)[\"time_index\"].values\n",
-    "    sample_N1 = df_N1.sample(n=n_per_stage, random_state=3)[\"time_index\"].values\n",
+    "# for subject in subject_batch:\n",
+    "#     subj_path = os.path.join(data_dir, subject)\n",
+    "#     csv_files = glob.glob(os.path.join(subj_path, \"*.csv\"))\n",
+    "#     edf_files = glob.glob(os.path.join(subj_path, \"*.edf\"))\n",
+    "#     if not csv_files or not edf_files:\n",
+    "#         print(f\"Skipping {subject}: missing CSV or EDF.\")\n",
+    "#         continue\n",
+    "#     df = pd.read_csv(csv_files[0], index_col=0)\n",
+    "#     df_W = df[df[\"stage\"]==\"W\"]\n",
+    "#     df_N1 = df[df[\"stage\"]==\"N1\"]\n",
+    "#     if len(df_W) < n_per_stage or len(df_N1) < n_per_stage:\n",
+    "#         print(f\"Skipping {subject}: not enough epochs for one stage.\")\n",
+    "#         continue\n",
+    "#     # fixed random_state\n",
+    "#     sample_W = df_W.sample(n=n_per_stage, random_state=3)[\"time_index\"].values\n",
+    "#     sample_N1 = df_N1.sample(n=n_per_stage, random_state=3)[\"time_index\"].values\n",
     "\n",
-    "    reader = pyedflib.EdfReader(edf_files[0])\n",
-    "    fs = reader.getSampleFrequency(0)  # 1000 Hz\n",
-    "    total_samples = reader.getNSamples()[0]\n",
-    "    n_channels = reader.signals_in_file\n",
-    "    signals = [reader.readSignal(i) for i in range(n_channels)]\n",
-    "    channel_labels = reader.getSignalLabels()\n",
-    "    reader.close()\n",
+    "#     reader = pyedflib.EdfReader(edf_files[0])\n",
+    "#     fs = reader.getSampleFrequency(0)  # 1000 Hz\n",
+    "#     total_samples = reader.getNSamples()[0]\n",
+    "#     n_channels = reader.signals_in_file\n",
+    "#     signals = [reader.readSignal(i) for i in range(n_channels)]\n",
+    "#     channel_labels = reader.getSignalLabels()\n",
+    "#     reader.close()\n",
     "\n",
-    "    subject_windows = {}\n",
-    "    for i in group:\n",
-    "        if i >= len(channel_labels):\n",
-    "            continue\n",
-    "        ch_label = channel_labels[i]\n",
-    "        for stage, sample_times in zip([\"W\", \"N1\"], [sample_W, sample_N1]):\n",
-    "            for j, t in enumerate(sample_times):\n",
-    "                start = int((t - half_window_sec) * fs)\n",
-    "                end = int((t + half_window_sec) * fs)\n",
-    "                if start < 0 or end > total_samples:\n",
-    "                    continue\n",
-    "                win = signals[i][start:end]\n",
-    "                win = notch_filter(win, fs, freq=60, Q=30)\n",
-    "                win = lowpass_filter(win, fs, cutoff=90, order=4)\n",
-    "                ds_win = downsample_window(win, fs, target_fs=200)\n",
-    "                key = f\"{subject.lower()}_{stage.lower()}_win_{j+1}_{ch_label.replace('-', '').replace(' ', '')}\"\n",
-    "                # Save both the processed window and the center time index.\n",
-    "                subject_windows[key] = {\"window\": ds_win, \"time_index\": t}\n",
+    "#     subject_windows = {}\n",
+    "#     for i in group:\n",
+    "#         if i >= len(channel_labels):\n",
+    "#             continue\n",
+    "#         ch_label = channel_labels[i]\n",
+    "#         for stage, sample_times in zip([\"W\", \"N1\"], [sample_W, sample_N1]):\n",
+    "#             for j, t in enumerate(sample_times):\n",
+    "#                 start = int((t - half_window_sec) * fs)\n",
+    "#                 end = int((t + half_window_sec) * fs)\n",
+    "#                 if start < 0 or end > total_samples:\n",
+    "#                     continue\n",
+    "#                 win = signals[i][start:end]\n",
+    "#                 win = notch_filter(win, fs, freq=60, Q=30)\n",
+    "#                 win = lowpass_filter(win, fs, cutoff=90, order=4)\n",
+    "#                 ds_win = downsample_window(win, fs, target_fs=200)\n",
+    "#                 key = f\"{subject.lower()}_{stage.lower()}_win_{j+1}_{ch_label.replace('-', '').replace(' ', '')}\"\n",
+    "#                 # Save both the processed window and the center time index.\n",
+    "#                 subject_windows[key] = {\"window\": ds_win, \"time_index\": t}\n",
     "\n",
-    "    out_path = os.path.join(subj_path, \"extracted_windows_group7.pkl\")\n",
-    "    with open(out_path, \"wb\") as f:\n",
-    "        pickle.dump(subject_windows, f)\n",
-    "    print(f\"Saved {len(subject_windows)} windows for {subject} (electrode group 7) at {out_path}\")"
+    "#     out_path = os.path.join(subj_path, \"extracted_windows_group7.pkl\")\n",
+    "#     with open(out_path, \"wb\") as f:\n",
+    "#         pickle.dump(subject_windows, f)\n",
+    "#     print(f\"Saved {len(subject_windows)} windows for {subject} (electrode group 7) at {out_path}\")"
    ]
   },
   {
@@ -812,9 +804,9 @@
     "# # first_group = electrode_groups[0]\n",
     "# group = electrode_groups[7]\n",
     "\n",
-    "# subject_batch = subject_dirs[21:22] \n",
-    "# # subject_batch = subject_dirs[22:23]\n",
-    "# # subject_batch = subject_dirs[23:24]\n",
+    "# # subject_batch = subject_dirs[21:22] # done\n",
+    "# # subject_batch = subject_dirs[22:23] # done\n",
+    "# subject_batch = subject_dirs[23:24] # done\n",
     "\n",
     "# k = 2  # windows per electrode per subject (so k/2 for \"W\" and k/2 for \"N1\")\n",
     "# n_per_stage = k // 2\n",
@@ -893,9 +885,9 @@
     "# electrode_groups = np.array_split(electrode_indices, 10)\n",
     "# group = electrode_groups[8]\n",
     "\n",
-    "# subject_batch = subject_dirs[24:25] \n",
-    "# # subject_batch = subject_dirs[25:26]\n",
-    "# # subject_batch = subject_dirs[26:27]\n",
+    "# # subject_batch = subject_dirs[24:25] # done\n",
+    "# # subject_batch = subject_dirs[25:26] # done\n",
+    "# subject_batch = subject_dirs[26:27] # done\n",
     "\n",
     "# k = 2  # windows per electrode per subject (so k/2 for \"W\" and k/2 for \"N1\")\n",
     "# n_per_stage = k // 2\n",
@@ -963,73 +955,81 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 18 windows for EPCTL29 (electrode group 10) at /Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep_data/EPCTL29/extracted_windows_group10.pkl\n"
+     ]
+    }
+   ],
    "source": [
-    "# data_dir = \"/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep_data\"\n",
-    "# subject_dirs = sorted([d for d in os.listdir(data_dir)\n",
-    "#                        if d.lower().startswith(\"epctl\") and os.path.isdir(os.path.join(data_dir, d))])\n",
+    "data_dir = \"/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep_data\"\n",
+    "subject_dirs = sorted([d for d in os.listdir(data_dir)\n",
+    "                       if d.lower().startswith(\"epctl\") and os.path.isdir(os.path.join(data_dir, d))])\n",
     "\n",
-    "# # Split 93 electrodes into 10 groups and select the first group.\n",
-    "# electrode_indices = np.arange(93)\n",
-    "# electrode_groups = np.array_split(electrode_indices, 10)\n",
-    "# group = electrode_groups[9]\n",
+    "# Split 93 electrodes into 10 groups and select the first group.\n",
+    "electrode_indices = np.arange(93)\n",
+    "electrode_groups = np.array_split(electrode_indices, 10)\n",
+    "group = electrode_groups[9]\n",
     "\n",
     "# subject_batch = subject_dirs[27:28] \n",
-    "# # subject_batch = subject_dirs[28:29]\n",
+    "subject_batch = subject_dirs[28:29] # last one!\n",
     "\n",
-    "# k = 2  # windows per electrode per subject (so k/2 for \"W\" and k/2 for \"N1\")\n",
-    "# n_per_stage = k // 2\n",
-    "# window_sec = 2   # window spans 2 sec (±1 sec)\n",
-    "# half_window_sec = window_sec / 2\n",
+    "k = 2  # windows per electrode per subject (so k/2 for \"W\" and k/2 for \"N1\")\n",
+    "n_per_stage = k // 2\n",
+    "window_sec = 2   # window spans 2 sec (±1 sec)\n",
+    "half_window_sec = window_sec / 2\n",
     "\n",
-    "# for subject in subject_batch:\n",
-    "#     subj_path = os.path.join(data_dir, subject)\n",
-    "#     csv_files = glob.glob(os.path.join(subj_path, \"*.csv\"))\n",
-    "#     edf_files = glob.glob(os.path.join(subj_path, \"*.edf\"))\n",
-    "#     if not csv_files or not edf_files:\n",
-    "#         print(f\"Skipping {subject}: missing CSV or EDF.\")\n",
-    "#         continue\n",
-    "#     df = pd.read_csv(csv_files[0], index_col=0)\n",
-    "#     df_W = df[df[\"stage\"]==\"W\"]\n",
-    "#     df_N1 = df[df[\"stage\"]==\"N1\"]\n",
-    "#     if len(df_W) < n_per_stage or len(df_N1) < n_per_stage:\n",
-    "#         print(f\"Skipping {subject}: not enough epochs for one stage.\")\n",
-    "#         continue\n",
-    "#     # fixed random_state\n",
-    "#     sample_W = df_W.sample(n=n_per_stage, random_state=3)[\"time_index\"].values\n",
-    "#     sample_N1 = df_N1.sample(n=n_per_stage, random_state=3)[\"time_index\"].values\n",
+    "for subject in subject_batch:\n",
+    "    subj_path = os.path.join(data_dir, subject)\n",
+    "    csv_files = glob.glob(os.path.join(subj_path, \"*.csv\"))\n",
+    "    edf_files = glob.glob(os.path.join(subj_path, \"*.edf\"))\n",
+    "    if not csv_files or not edf_files:\n",
+    "        print(f\"Skipping {subject}: missing CSV or EDF.\")\n",
+    "        continue\n",
+    "    df = pd.read_csv(csv_files[0], index_col=0)\n",
+    "    df_W = df[df[\"stage\"]==\"W\"]\n",
+    "    df_N1 = df[df[\"stage\"]==\"N1\"]\n",
+    "    if len(df_W) < n_per_stage or len(df_N1) < n_per_stage:\n",
+    "        print(f\"Skipping {subject}: not enough epochs for one stage.\")\n",
+    "        continue\n",
+    "    # fixed random_state\n",
+    "    sample_W = df_W.sample(n=n_per_stage, random_state=3)[\"time_index\"].values\n",
+    "    sample_N1 = df_N1.sample(n=n_per_stage, random_state=3)[\"time_index\"].values\n",
     "\n",
-    "#     reader = pyedflib.EdfReader(edf_files[0])\n",
-    "#     fs = reader.getSampleFrequency(0)  # 1000 Hz\n",
-    "#     total_samples = reader.getNSamples()[0]\n",
-    "#     n_channels = reader.signals_in_file\n",
-    "#     signals = [reader.readSignal(i) for i in range(n_channels)]\n",
-    "#     channel_labels = reader.getSignalLabels()\n",
-    "#     reader.close()\n",
+    "    reader = pyedflib.EdfReader(edf_files[0])\n",
+    "    fs = reader.getSampleFrequency(0)  # 1000 Hz\n",
+    "    total_samples = reader.getNSamples()[0]\n",
+    "    n_channels = reader.signals_in_file\n",
+    "    signals = [reader.readSignal(i) for i in range(n_channels)]\n",
+    "    channel_labels = reader.getSignalLabels()\n",
+    "    reader.close()\n",
     "\n",
-    "#     subject_windows = {}\n",
-    "#     for i in group:\n",
-    "#         if i >= len(channel_labels):\n",
-    "#             continue\n",
-    "#         ch_label = channel_labels[i]\n",
-    "#         for stage, sample_times in zip([\"W\", \"N1\"], [sample_W, sample_N1]):\n",
-    "#             for j, t in enumerate(sample_times):\n",
-    "#                 start = int((t - half_window_sec) * fs)\n",
-    "#                 end = int((t + half_window_sec) * fs)\n",
-    "#                 if start < 0 or end > total_samples:\n",
-    "#                     continue\n",
-    "#                 win = signals[i][start:end]\n",
-    "#                 win = notch_filter(win, fs, freq=60, Q=30)\n",
-    "#                 win = lowpass_filter(win, fs, cutoff=90, order=4)\n",
-    "#                 ds_win = downsample_window(win, fs, target_fs=200)\n",
-    "#                 key = f\"{subject.lower()}_{stage.lower()}_win_{j+1}_{ch_label.replace('-', '').replace(' ', '')}\"\n",
-    "#                 # Save both the processed window and the center time index.\n",
-    "#                 subject_windows[key] = {\"window\": ds_win, \"time_index\": t}\n",
+    "    subject_windows = {}\n",
+    "    for i in group:\n",
+    "        if i >= len(channel_labels):\n",
+    "            continue\n",
+    "        ch_label = channel_labels[i]\n",
+    "        for stage, sample_times in zip([\"W\", \"N1\"], [sample_W, sample_N1]):\n",
+    "            for j, t in enumerate(sample_times):\n",
+    "                start = int((t - half_window_sec) * fs)\n",
+    "                end = int((t + half_window_sec) * fs)\n",
+    "                if start < 0 or end > total_samples:\n",
+    "                    continue\n",
+    "                win = signals[i][start:end]\n",
+    "                win = notch_filter(win, fs, freq=60, Q=30)\n",
+    "                win = lowpass_filter(win, fs, cutoff=90, order=4)\n",
+    "                ds_win = downsample_window(win, fs, target_fs=200)\n",
+    "                key = f\"{subject.lower()}_{stage.lower()}_win_{j+1}_{ch_label.replace('-', '').replace(' ', '')}\"\n",
+    "                # Save both the processed window and the center time index.\n",
+    "                subject_windows[key] = {\"window\": ds_win, \"time_index\": t}\n",
     "\n",
-    "#     out_path = os.path.join(subj_path, \"extracted_windows_group10.pkl\")\n",
-    "#     with open(out_path, \"wb\") as f:\n",
-    "#         pickle.dump(subject_windows, f)\n",
-    "#     print(f\"Saved {len(subject_windows)} windows for {subject} (electrode group 10) at {out_path}\")"
+    "    out_path = os.path.join(subj_path, \"extracted_windows_group10.pkl\")\n",
+    "    with open(out_path, \"wb\") as f:\n",
+    "        pickle.dump(subject_windows, f)\n",
+    "    print(f\"Saved {len(subject_windows)} windows for {subject} (electrode group 10) at {out_path}\")"
    ]
   }
  ],
