--- a/notebooks/anphy_code/anp_visualizing_stem.ipynb
+++ b/notebooks/anphy_code/anp_visualizing_stem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,17 @@
     "import os\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from config.config import DataConfig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep_data\"\n",
+    "data_dir = DataConfig.BASE_PATH\n",
     "subject_dirs = sorted([\n",
     "    os.path.join(data_dir, d)\n",
     "    for d in os.listdir(data_dir)\n",
@@ -30,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing EDF file: /Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep_data/EPCTL01/EPCTL01.edf\n",
+      "Processing EDF file: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL01/EPCTL01.edf\n",
       "\n",
       "EDF File Attributes:\n",
       "technician: \n",
@@ -69,7 +70,7 @@
       " 28738000 28738000 28738000 28738000 28738000 28738000 28738000 28738000\n",
       " 28738000 28738000 28738000 28738000 28738000]\n",
       "\n",
-      "Processing TXT file: /Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep_data/EPCTL01/EPCTL01.txt\n",
+      "Processing TXT file: /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL01/EPCTL01.txt\n",
       "\n",
       "TXT File Attributes:\n",
       "Number of lines: 959\n",
@@ -435,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
