gotta fix config

--- a/notebooks/anphy_code/anp_feat_extr_xpr.ipynb
+++ b/notebooks/anphy_code/anp_feat_extr_xpr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -122,8 +122,8 @@
     }
    ],
    "source": [
-    "# data_dir = \"/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep_data\"\n",
-    "data_dir = DataConfig.BASE_PATH\n",
+    "data_dir = \"/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep_data\"\n",
+    "# data_dir = DataConfig.BASE_PATH\n",
     "pkl_files = glob.glob(os.path.join(data_dir, \"EPCTL*\", \"extracted_windows_group*.pkl\"))\n",
     "\n",
     "all_rows = []\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,12 +241,13 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import classification_report, confusion_matrix, roc_curve, auc\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -263,11 +264,6 @@
     }
    ],
    "source": [
-    "# import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
-    "\n",
-    "# Assume df is your DataFrame with all extracted features.\n",
     "print(\"DataFrame shape:\", df.shape)\n",
     "\n",
     "all_subjects = np.sort(df[\"subject\"].unique())\n",
