made some edits

--- a/notebooks/anphy_code/EPCTL_txt_read.ipynb
+++ b/notebooks/anphy_code/EPCTL_txt_read.ipynb
@@ -17,11 +17,11 @@
     "import pandas as pd\n",
     "import glob\n",
     "import os\n",
-    "\n",
+    "from config.config import DataConfig\n",
     "# from google.colab import drive\n",
     "# drive.mount('/content/drive')\n",
-    "data_dir = \"/Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset\"\n",
-    "results_dir = \"/Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/results\"\n",
+    "data_dir = DataConfig.BASE_PATH\n",
+    "results_dir = os.path.join(os.path.dirname(data_dir), \"results\")\n",
     "\n",
     "file_list = glob.glob(os.path.join(data_dir, \"*.txt\"))\n",
     "\n",
